[package]
name = "spmp8000-libretro"
version.workspace = true
edition.workspace = true
description = "libretro core for SPMP8000Emu (loadable by RetroArch)"
license.workspace = true

[lib]
# The libretro buildbot expects a cdylib named after the package
name = "spmp8000"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
spmp8000-core.workspace = true
log.workspace = true
